--- a/app/yardWrk/accounts/templates/accounts/base.html
+++ b/app/yardWrk/accounts/templates/accounts/base.html
@@ -31,6 +31,12 @@
             color: #f1f1f1;
         }
 
+        .logout {
+            color: #66ccff;
+            position: absolute;
+            bottom: 20px;
+        }
+
         .main {
             margin-left: 160px;
             padding: 0px 10px;
@@ -44,17 +50,16 @@
 <body>
 
     <div class="sidenav">
-        <a href="/accounts/home">Home</a>
         <a href="/accounts/profile">Profile</a>
         <a href="/accounts/register">Register</a>
         <a href="/accounts/login">Login</a>
-        <a href="/accounts/logout">Logout</a>
+        <a class="logout" href="/accounts/logout">Logout</a>
     </div>
 
     <div id="content", class="main">
         <div class="row justify-content-center">
             <div class="col-8">
-                <h1 class="mt-2">Django Tutorial</h1>
+                <h1 class="mt-2">yardwrk</h1>
                 <hr class="mt-0 mb-4">
                 {% block content %}
                     <h1>Base Template</h1>
