--- a/app/yardWrk/accounts/templates/accounts/edit-profile.html
+++ b/app/yardWrk/accounts/templates/accounts/edit-profile.html
@@ -1,4 +1,4 @@
-{% extends "authentication/base.html" %}
+{% extends "accounts/base.html" %}
 
 {% block title %} Edit Profile {% endblock %}
 
@@ -7,7 +7,7 @@
 {% block content %}
     <h2>Edit Profile</h2>
 
-    <form method="post" class="from-group">
+    <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-success">Submit Changes</button>
