--- a/app/yardWrk/accounts/templates/accounts/login.html
+++ b/app/yardWrk/accounts/templates/accounts/login.html
@@ -1,11 +1,11 @@
-{% extends "authentication/base.html" %}
+{% extends "accounts/base.html" %}
 
 {% block title %} Login {% endblock %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <form method="post" class="from-group">
+    <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
         <p>Don't have an account? Create one <a href="/accounts/register">here</a></p>
