--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -1,30 +1,46 @@
+<html>
+    <head>
+        <title>Customer Dashboard</title>
+    </head>
+    
+    <main>
+        <div>
+            <header>
+                <h2>Pending Jobs</h2>
+            </header>
+            {% if pending_jobs %}
+                {% for job in pending_jobs %}
+                    <li>{{job.name}}</li>
+                {% endfor %}
+            {% else %}
+                <p>You have no pending jobs.</p>
+            {% endif %}
+        </div>
 
-{% if pending_jobs %}
-    {% for job in pending_jobs %}
-        <li> 
-            {{job.name}}
-        </li>
-    {% endfor %}
-{% else %}
-    <p>You have no pending jobs.</p>
-{% endif %}
+        <div>
+            <header>
+                <h2>Progressing Jobs</h2>
+            </header>
+            {% if progressing_jobs %}
+                {% for job in progressing_jobs %}
+                    <li>{{job.name}}</li>
+                {% endfor %}
+            {% else %}
+                <p>You have no progressing jobs.</p>
+            {% endif %}
+        </div>
 
-{% if progressing_jobs %}
-    {% for job in progressing_jobs %}
-        <li> 
-            {{job.name}}
-        </li>
-    {% endfor %}
-{% else %}
-    <p>You have no progressing jobs.</p>
-{% endif %}
-
-{% if completed_jobs %}
-    {% for job in completed_jobs %}
-        <li> 
-            {{job.name}}
-        </li>
-    {% endfor %}
-{% else %}
-    <p>You have no completed jobs.</p>
-{% endif %}
+        <div>
+            <header>
+                <h2>Completed Jobs</h2>
+            </header>
+            {% if completed_jobs %}
+                {% for job in completed_jobs %}
+                    <li>{{job.name}}</li>
+                {% endfor %}
+            {% else %}
+                <p>You have no completed jobs.</p>
+            {% endif %}
+        </div>
+    </main>
+</html>
