--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -2,7 +2,7 @@
     <head>
         <title>Customer Dashboard</title>
     </head>
-    
+
     <main>
         <div>
             <header>
@@ -10,7 +10,13 @@
             </header>
             {% if pending_jobs %}
                 {% for job in pending_jobs %}
-                    <li>{{job.name}}</li>
+                    <div>
+                        <li>{{job.name}}</li>
+                        <ul>
+                            <li>Description: {{job.description}}</li>
+                            <li>Deadline: {{job.date_to_be_finished_by}}</li>
+                        </ul>
+                    </div>
                 {% endfor %}
             {% else %}
                 <p>You have no pending jobs.</p>
@@ -23,7 +29,13 @@
             </header>
             {% if progressing_jobs %}
                 {% for job in progressing_jobs %}
+                <div>
                     <li>{{job.name}}</li>
+                    <ul>
+                        <li>Description: {{job.description}}</li>
+                        <li>Deadline: {{job.date_to_be_finished_by}}</li>
+                    </ul>
+                </div>
                 {% endfor %}
             {% else %}
                 <p>You have no progressing jobs.</p>
@@ -36,7 +48,13 @@
             </header>
             {% if completed_jobs %}
                 {% for job in completed_jobs %}
+                <div>
                     <li>{{job.name}}</li>
+                    <ul>
+                        <li>Description: {{job.description}}</li>
+                        <li>Deadline: {{job.date_to_be_finished_by}}</li>
+                    </ul>
+                </div>
                 {% endfor %}
             {% else %}
                 <p>You have no completed jobs.</p>
