Profile page adjustments; Added address and ability to edit address

--- a/app/yardWrk/accounts/templates/accounts/edit-address.html
+++ b/app/yardWrk/accounts/templates/accounts/edit-address.html
@@ -1,11 +1,11 @@
 {% extends "accounts/base.html" %}
 
-{% block title %} Edit Profile {% endblock %}
+{% block title %} Edit Adress {% endblock %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <h2>Edit Profile</h2>
+    <h2>Edit Address</h2>
 
     <form method="post" class="form-group">
         {% csrf_token %}
