--- a/app/yardWrk/accounts/templates/accounts/profile.html
+++ b/app/yardWrk/accounts/templates/accounts/profile.html
@@ -25,4 +25,29 @@
 
         <p>Edit profile <a href="/accounts/profile/edit">here</a></p>
     </div>
+
+    <h2>Address Information</h2>
+
+    <div class="form-group">
+        <form>
+            <div class="form-group">
+                <label for="address">Address</label>
+                <input type="text" class="form-control" id="id-address" value="{{ user.address }}" readonly>
+            </div>
+            <div class="form-group">
+                <label for="city">City</label>
+                <input type="text" class="form-control" id="id-city" value="{{ user.city }}" readonly>
+            </div>
+            <div class="form-group">
+                <label for="zip">Zip/Postal Code</label>
+                <input type="text" class="form-control" id="id-zip" value="{{ user.zip_code }}" readonly>
+            </div>
+            <div class="form-group">
+                <label for="state">State</label>
+                <input type="text" class="form-control" id="id-state" value="{{ user.state }}" readonly>
+            </div>
+        </form>
+
+        <p>Edit Address <a href="/accounts/profile/edit-address">here</a></p>
+    </div>
 {% endblock %}
