--- a/app/yardWrk/accounts/templates/accounts/edit-address.html
+++ b/app/yardWrk/accounts/templates/accounts/edit-address.html
@@ -1,6 +1,6 @@
 {% extends "accounts/base.html" %}
 
-{% block title %} Edit Adress {% endblock %}
+{% block title %} Edit Adress Information {% endblock %}
 
 {% load crispy_forms_tags %}
 
