--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -15,6 +15,7 @@
                         <ul>
                             <li>Description: {{job.description}}</li>
                             <li>Deadline: {{job.date_to_be_finished_by}}</li>
+                            <li><a href="{% url 'ownedJobDetails' job.id %}">Click for more details...</a></li>
                         </ul>
                     </div>
                 {% endfor %}
@@ -34,6 +35,7 @@
                     <ul>
                         <li>Description: {{job.description}}</li>
                         <li>Deadline: {{job.date_to_be_finished_by}}</li>
+                        <li><a href="{% url 'ownedJobDetails' job.id %}">Click for more details...</a></li>
                     </ul>
                 </div>
                 {% endfor %}
@@ -53,6 +55,7 @@
                     <ul>
                         <li>Description: {{job.description}}</li>
                         <li>Deadline: {{job.date_to_be_finished_by}}</li>
+                        <li><a href="{% url 'ownedJobDetails' job.id %}">Click for more details...</a></li>
                     </ul>
                 </div>
                 {% endfor %}
