Ability to create new job post from customer dash

--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -22,6 +22,7 @@
             {% else %}
                 <p>You have no pending jobs.</p>
             {% endif %}
+            <p>Create a new job post <a href="yardSite/job/create">here</a></p>
         </div>
 
         <div>
