--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -22,7 +22,7 @@
             {% else %}
                 <p>You have no pending jobs.</p>
             {% endif %}
-            <p>Create a new job post <a href="customer/job/create">here</a></p>
+            <p>Create a new job post <a href="/job/create">here</a></p>
         </div>
 
         <div>
