--- a/app/yardWrk/yardSite/templates/yardSite/base.html
+++ b/app/yardWrk/yardSite/templates/yardSite/base.html
@@ -6,6 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
     <style type="text/css">
+        * {
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+        }
+
+        html {
+            overflow: hidden;
+            height: 100%;
+        }
+
+        body {
+            overflow: auto;
+            height: 100%;
+        }
+
+        .topnav {
+            position: fixed;
+            width: 100%;
+            z-index: 1;
+        }
+
+        .logo {
+            float: left;
+            margin-left: 180px;
+            text-transform: lowercase;
+            letter-spacing: 5px;
+            font-size: 52px;
+        }
 
         .sidenav {
             height: 100%;
@@ -14,7 +43,7 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: #111;
+            background-color: #023020;
             overflow-x: hidden;
             padding-top: 20px;
         }
@@ -22,13 +51,15 @@
         .sidenav a {
             padding: 6px 8px 6px 16px;
             text-decoration: none;
-            color: #818181;
-            font-size: 25px;
+            color: #f1f1f1;
+            font-size: 28px;
+            text-transform: lowercase;
             display: block;
         }
 
         .sidenav a:hover {
-            color: #f1f1f1;
+            color: #daf7a6;
+            text-decoration: none;
         }
 
         .logout {
@@ -38,6 +69,7 @@
         }
 
         .main {
+            margin-top: 120px;
             margin-left: 160px;
             padding: 0px 10px;
         }
@@ -48,19 +80,53 @@
     <title>{% block title %}Base Template{% endblock %}</title>
 </head>
 <body>
+    <header class="topnav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="d-flex flex-grow-1">
+                <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
+                <a class="navbar-brand d-none d-lg-inline-block" href="#">
+                    <h1 class="logo">yardwrk</h1>
+                </a>
+                <div class="w-100 text-right">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+                <ul class="navbar-nav ml-auto flex-nowrap">
+                    {% if request.user.is_authenticated %}
+                        <li class="nav-item"></li>
+                            <a href="{% url 'accounts:profile' %}" class="nav-link m-2 menu-item nav-active">
+                                <button class="btn btn-secondary">Account</button>
+                            </a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a href="{% url 'accounts:login' %}" class="nav-link m-2 menu-item nav-active">
+                                <button class="btn btn-secondary">Sign In</button>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'accounts:register' %}" class="nav-link m-2 menu-item nav-active">
+                                <button class="btn btn-secondary">Create An Account</button>
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     <div class="sidenav">
-        <a href="/accounts/profile">Profile</a>
-        <a href="/accounts/register">Register</a>
-        <a href="/accounts/login">Login</a>
-        <a class="logout" href="/accounts/logout">Logout</a>
+        <a href="{% url 'yardSite:customerDashboard' %}">Customer</a>
+        <a href="{% url 'yardSite:workerDashboard' %}">Worker</a>
+        <a class="logout" href="{% url 'accounts:logout' %}">Logout</a>
     </div>
 
     <div id="content", class="main">
         <div class="row justify-content-center">
-            <div class="col-8">
-                <h1 class="mt-2">yardwrk</h1>
-                <hr class="mt-0 mb-4">
+            <div class="col-11">
                 {% block content %}
                     <h1>Base Template</h1>
                 {% endblock %}
