--- a/app/yardWrk/accounts/templates/accounts/login.html
+++ b/app/yardWrk/accounts/templates/accounts/login.html
@@ -1,16 +1,69 @@
-{% extends "accounts/base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{% block title %} Login {% endblock %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-{% load crispy_forms_tags %}
+    <style type="text/css">
+        .gradient-custom {
+            background: #013220;
+            background: linear-gradient(to bottom, #013220 0%, #002311 100%);
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #013220), color-stop(100%, #002311));
+            background: -webkit-linear-gradient(top, #013220 0%, #002311 100%);
+            background: -moz-linear-gradient(top, #013220 0%, #002311 100%);
+            background: -o-linear-gradient(top, #013220 0%, #002311 100%);
+            background: -ms-linear-gradient(top, #013220 0%, #002311 100%);
+        }
+    </style>
 
-{% block content %}
-    <h1 class="mt-2">Sign In</h1>
-    <hr class="mt-0 mb-4">
-    <form method="post" class="form-group">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <p>Don't have an account? <a href="/accounts/register">Create One</a></p>
-        <button type="submit" class="btn btn-success">Login</button>
-    </form>
-{%endblock%}
+    <title>Sign In</title>
+</head>
+<body>
+    <section class="vh-100 gradient-custom">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                    <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                        <div class="card-body p-5 text-center">
+                            <div class="mb-md-5 mt-md-4 pb-5">
+                                <h1 class="fw-bold mb-3 fs-1 text-lowercase" style="letter-spacing: 3px;">yardwrk</h2>
+                                <p class="text-white-50 mb-3">Please enter your username and password!</p>
+                                <form method="post" class="form-group">
+                                    {% csrf_token %}
+                                    <div class="form-outline form-white mb-4">
+                                        <label class="form-label" for="typeUsernameX">Username</label>
+                                        <input type="text" name="username" id="typeUsernameX" class="form-control form-control-lg" {% if form.is_bound %} value="{{ form.username.value }}" {% endif %}/>
+                                        {% for err in form.username.errors %}
+                                            <small class="text-danger">{{ err }}</small>
+                                        {% endfor %}
+                                    </div>
+                    
+                                    <div class="form-outline form-white mb-4">
+                                        <label class="form-label" for="typePasswordX">Password</label>
+                                        <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg" />
+                                        {% for err in form.password.errors %}
+                                            <small class="text-danger">{{ err }}</small>
+                                        {% endfor %}
+                                    </div>
+                    
+                                    <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> -->
+                    
+                                    <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                                </form>
+                                <div class="mt-4">
+                                    <p class="mb-0">Don't have an account? <a href="{% url 'accounts:register' %}" class="text-white-50 fw-bold" style="text-decoration: none;">Sign Up</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+</html>
