--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -33,16 +33,20 @@
         <h1 class="mt-2">In Progress</h1>
         <hr class="mt-0 mb-4">
         {% if progressing_jobs %}
-            {% for job in progressing_jobs %}
-            <div>
-                <li>{{job.name}}</li>
-                <ul>
-                    <li>Description: {{job.description}}</li>
-                    <li>Deadline: {{job.date_to_be_finished_by}}</li>
-                    <li><a href="{% url 'yardSite:ownedJobDetails' job.id %}">Click for more details...</a></li>
-                </ul>
+            <div class="card-columns">
+                {% for job in progressing_jobs %}
+                    <div class="card bg-light text-center">
+                        <h5 class="card-header">{{job.job_type}}</h5>
+                        <div class="card-body">
+                            <p class="card-text">{{job.description}}</li>
+                            <p class="card-text">Payment: ${{job.cash_reward}}</p>
+                        </div>
+                        <a href="{% url 'yardSite:ownedJobDetails' job.id %}">
+                            <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
+                        </a>
+                    </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         {% else %}
             <p>You have no progressing jobs.</p>
         {% endif %}
@@ -52,16 +56,20 @@
         <h1 class="mt-2">Completed</h1>
         <hr class="mt-0 mb-4">
         {% if completed_jobs %}
+        <div class="card-columns">
             {% for job in completed_jobs %}
-            <div>
-                <li>{{job.name}}</li>
-                <ul>
-                    <li>Description: {{job.description}}</li>
-                    <li>Deadline: {{job.date_to_be_finished_by}}</li>
-                    <li><a href="{% url 'yardStie:ownedJobDetails' job.id %}">Click for more details...</a></li>
-                </ul>
-            </div>
+                <div class="card bg-light text-center">
+                    <h5 class="card-header">{{job.job_type}}</h5>
+                    <div class="card-body">
+                        <p class="card-text">{{job.description}}</li>
+                        <p class="card-text">Payment: ${{job.cash_reward}}</p>
+                    </div>
+                    <a href="{% url 'yardSite:ownedJobDetails' job.id %}">
+                        <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
+                    </a>
+                </div>
             {% endfor %}
+        </div>
         {% else %}
             <p>You have no completed jobs.</p>
         {% endif %}
