even more visual updates

--- a/app/yardWrk/yardSite/templates/yardSite/home.html
+++ b/app/yardWrk/yardSite/templates/yardSite/home.html
@@ -1,6 +1,6 @@
-{% extends "yardSite/base.html" %}
+{% extends "accounts/base.html" %}
 
-{% block title %} Create Job Post {% endblock %}
+{% block title %} Home {% endblock %}
 
 {% block content %}
 
