--- a/app/yardWrk/yardSite/templates/yardSite/ownedJobDetails.html
+++ b/app/yardWrk/yardSite/templates/yardSite/ownedJobDetails.html
@@ -1,6 +1,6 @@
 {% extends "yardSite/base.html" %}
 
-{% block title %} Create Job Post {% endblock %}
+{% block title %} Job Details {% endblock %}
 
 {% block content %}
     {{ job }}
