--- a/app/yardWrk/accounts/templates/accounts/edit-address.html
+++ b/app/yardWrk/accounts/templates/accounts/edit-address.html
@@ -1,6 +1,6 @@
 {% extends "accounts/base.html" %}
 
-{% block title %} Edit Adress Information {% endblock %}
+{% block title %} Edit Adress {% endblock %}
 
 {% load crispy_forms_tags %}
 
@@ -10,7 +10,7 @@
     <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-success">Submit Changes</button>
-        <button class="btn btn-danger">Cancel</button>
+        <button type="submit" class="mt-2 btn btn-outline-primary">Submit Changes</button>
+        <button class="mt-2 btn btn-outline-danger">Cancel</button>
     </form>
 {% endblock %}
