--- a/app/yardWrk/accounts/templates/accounts/edit-profile.html
+++ b/app/yardWrk/accounts/templates/accounts/edit-profile.html
@@ -10,7 +10,7 @@
     <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-success">Submit Changes</button>
-        <button class="btn btn-danger">Cancel</button>
+        <button type="submit" class="mt-2 btn btn-outline-primary">Submit Changes</button>
+        <button class="mt-2 btn btn-outline-danger">Cancel</button>
     </form>
 {% endblock %}
