--- a/app/yardWrk/accounts/templates/accounts/login.html
+++ b/app/yardWrk/accounts/templates/accounts/login.html
@@ -7,19 +7,27 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <style type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@300;400;500&family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
+
+    <style>
         .gradient-custom {
-            background: #013220;
-            background: linear-gradient(to bottom, #013220 0%, #002311 100%);
-            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #013220), color-stop(100%, #002311));
-            background: -webkit-linear-gradient(top, #013220 0%, #002311 100%);
-            background: -moz-linear-gradient(top, #013220 0%, #002311 100%);
-            background: -o-linear-gradient(top, #013220 0%, #002311 100%);
-            background: -ms-linear-gradient(top, #013220 0%, #002311 100%);
+            background: #093028;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #237A57, #093028);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #237A57, #093028); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        }
+
+        .logo {
+            font-family: 'Inconsolata', monospace;
+            font-family: 'Athiti', sans-serif;
+            letter-spacing: 4px;
+            font-weight: 400;
+            font-size: 48px;
         }
     </style>
 
-    <title>Sign In</title>
+    <title> yardwrk - Sign In </title>
 </head>
 <body>
     <section class="vh-100 gradient-custom">
@@ -29,7 +37,7 @@
                     <div class="card bg-dark text-white" style="border-radius: 1rem;">
                         <div class="card-body p-5 text-center">
                             <div class="mb-md-5 mt-md-4 pb-5">
-                                <h1 class="fw-bold mb-3 fs-1 text-lowercase" style="letter-spacing: 3px;">yardwrk</h2>
+                                <h1 class="logo mb-3 text-lowercase">yardwrk</h2>
                                 <p class="text-white-50 mb-3">Please enter your username and password!</p>
                                 <form method="post" class="form-group">
                                     {% csrf_token %}
