--- a/app/yardWrk/accounts/templates/accounts/profile.html
+++ b/app/yardWrk/accounts/templates/accounts/profile.html
@@ -26,7 +26,7 @@
         </form>
 
         <a href="{% url 'accounts:edit-profile' %}">
-            <button class="btn btn-outline-primary">Edit</button>
+            <button class="mt-2 btn btn-outline-secondary">Edit</button>
         </a>
     </div>
 
@@ -53,7 +53,7 @@
         </form>
 
         <a href="{% url 'accounts:edit-address' %}">
-            <button class="btn btn-outline-primary">Edit</button>
+            <button class="mt-2 btn btn-outline-secondary">Edit</button>
         </a>
     </div>
 {% endblock %}
