--- a/app/yardWrk/accounts/templates/accounts/register.html
+++ b/app/yardWrk/accounts/templates/accounts/register.html
@@ -1,6 +1,6 @@
 {% extends "accounts/base.html" %}
 
-{% block title %} Home Page {% endblock %}
+{% block title %} Sign Up {% endblock %}
 
 {% load crispy_forms_tags %}
 
@@ -10,7 +10,7 @@
     <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
-        <p>Already have an account? <a href="/accounts/login">Sign In</a></p>
-        <button type="submit" class="btn btn-success">Register</button>
+        <button type="submit" class="btn btn-outline-primary mt-1 mb-1">Register</button>
     </form>
+    <p>Already have an account? <a href="{% url 'accounts:login' %}">Sign In</a></p>
 {% endblock %}
