--- a/app/yardWrk/yardSite/templates/yardSite/base.html
+++ b/app/yardWrk/yardSite/templates/yardSite/base.html
@@ -5,128 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
-    <style type="text/css">
-        * {
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-        }
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'yardSite/base.css' %}">
 
-        html {
-            overflow: hidden;
-            height: 100%;
-        }
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@300;400;500&family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
 
-        body {
-            overflow: auto;
-            height: 100%;
-        }
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-        .topnav {
-            position: fixed;
-            width: 100%;
-            z-index: 1;
-        }
-
-        .logo {
-            float: left;
-            margin-left: 180px;
-            text-transform: lowercase;
-            letter-spacing: 5px;
-            font-size: 52px;
-        }
-
-        .sidenav {
-            height: 100%;
-            width: 160px;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color: #023020;
-            overflow-x: hidden;
-            padding-top: 20px;
-        }
-
-        .sidenav a {
-            padding: 6px 8px 6px 16px;
-            text-decoration: none;
-            color: #f1f1f1;
-            font-size: 28px;
-            text-transform: lowercase;
-            display: block;
-        }
-
-        .sidenav a:hover {
-            color: #daf7a6;
-            text-decoration: none;
-        }
-
-        .logout {
-            color: #66ccff;
-            position: absolute;
-            bottom: 20px;
-        }
-
-        .main {
-            margin-top: 120px;
-            margin-left: 160px;
-            padding: 0px 10px;
-        }
-    </style>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>{% block title %}Base Template{% endblock %}</title>
+    <title> yardwrk - {% block title %} Base Template {% endblock %}</title>
 </head>
 <body>
-    <header class="topnav">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="d-flex flex-grow-1">
-                <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
-                <a class="navbar-brand d-none d-lg-inline-block" href="#">
-                    <h1 class="logo">yardwrk</h1>
-                </a>
-                <div class="w-100 text-right">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+    <div class="header">
+        <div class="menu-bar gradient-custom">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <a class="navbar-brand ms-5" href="{% url 'yardSite:home' %}" style="letter-spacing: 5px;">yardwrk</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon me-5"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto me-5">
+                        <li class="nav-item active">
+                            <a class="nav-link active" href="{% url 'yardSite:home' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'yardSite:customerDashboard' %}">Customer</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'yardSite:workerDashboard' %}">Worker</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Account
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="{% url 'accounts:profile' %}">View Profile</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-            </div>
-            <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-                <ul class="navbar-nav ml-auto flex-nowrap">
-                    {% if request.user.is_authenticated %}
-                        <li class="nav-item"></li>
-                            <a href="{% url 'accounts:profile' %}" class="nav-link m-2 menu-item nav-active">
-                                <button class="btn btn-secondary">Account</button>
-                            </a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a href="{% url 'accounts:login' %}" class="nav-link m-2 menu-item nav-active">
-                                <button class="btn btn-secondary">Sign In</button>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'accounts:register' %}" class="nav-link m-2 menu-item nav-active">
-                                <button class="btn btn-secondary">Create An Account</button>
-                            </a>
-                        </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    <div class="sidenav">
-        <a href="{% url 'yardSite:customerDashboard' %}">Customer</a>
-        <a href="{% url 'yardSite:workerDashboard' %}">Worker</a>
-        <a class="logout" href="{% url 'accounts:logout' %}">Logout</a>
+            </nav>
+        </div>
     </div>
 
-    <div id="content", class="main">
-        <div class="row justify-content-center">
-            <div class="col-11">
+    <div id="content", class="main mt-4">
+        <div class="justify-content-center">
+            <div class="ms-5 me-5">
                 {% block content %}
                     <h1>Base Template</h1>
                 {% endblock %}
@@ -134,8 +61,6 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
