--- a/app/yardWrk/accounts/static/accounts/base.css
+++ b/app/yardWrk/accounts/static/accounts/base.css
@@ -3,6 +3,10 @@
     padding: 0px;
 }
 
+.main {
+    padding-top: 110px;
+}
+
 .gradient-custom {
     background: #093028;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #237A57, #093028);  /* Chrome 10-25, Safari 5.1-6 */
