--- a/app/yardWrk/accounts/templates/accounts/base.html
+++ b/app/yardWrk/accounts/templates/accounts/base.html
@@ -17,7 +17,7 @@
     <title> yardwrk - {% block title %} Base Template {% endblock %}</title>
 </head>
 <body>
-    <div class="header">
+    <div class="header fixed-top">
         <div class="menu-bar gradient-custom">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand ms-5" href="{% url 'yardSite:home' %}" style="letter-spacing: 5px;">yardwrk</a>
@@ -51,9 +51,9 @@
         </div>
     </div>
 
-    <div id="content", class="main mt-4">
+    <div id="content", class="main">
         <div class="justify-content-center">
-            <div class="ms-5 me-5">
+            <div class="mx-5">
                 {% block content %}
                     <h1>Base Template</h1>
                 {% endblock %}
