--- a/app/yardWrk/yardSite/static/yardSite/base.css
+++ b/app/yardWrk/yardSite/static/yardSite/base.css
@@ -3,6 +3,10 @@
     padding: 0px;
 }
 
+.main {
+    padding-top: 110px;
+}
+
 .gradient-custom {
     background: #093028;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #237A57, #093028);  /* Chrome 10-25, Safari 5.1-6 */
@@ -38,6 +42,7 @@
 .navbar-brand {
     font-family: 'Inconsolata', monospace;
     font-family: 'Athiti', sans-serif;
+    font-weight: 500;
     font-size: 48px!important;
     margin-left: 20px;
 }
