--- a/app/yardWrk/yardSite/templates/yardSite/finishJob.html
+++ b/app/yardWrk/yardSite/templates/yardSite/finishJob.html
@@ -16,6 +16,10 @@
                 <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
             </a>
         </div>
+	<a href="{% url 'yardSite:createReview' job.id %}">
+            <button class="btn btn-primary">Leave a review</button>
+        </a>
+
         <a href="{% url 'yardSite:workerDashboard' %}">
             <button class="btn btn-primary">Exit</button>
         </a>
