--- a/app/yardWrk/yardSite/templates/yardSite/ownedJobDetails.html
+++ b/app/yardWrk/yardSite/templates/yardSite/ownedJobDetails.html
@@ -18,20 +18,20 @@
         </ul>
         {% if job.available %}
             <a href="{% url 'yardSite:editJob' job.id %}">
-                <button class="btn btn-primary">Edit</button>
+                <button class="mt-2 btn btn-outline-primary">Edit</button>
             </a>
             {% if can_assign %}
             <a href="{% url 'yardSite:acceptedJob' job.id %}">
-                <button class="btn btn-primary">Take Job</button>
+                <button class="mt-2 btn btn-outline-primary">Take Job</button>
             </a>
             {% endif %}
         {% else %}
             {% if not job.completed %}
                 <a href="{% url 'yardSite:finishJob' job.id %}">
-                    <button class="btn btn-primary">Record Completion</button>
+                    <button class="mt-2 btn btn-outline-primary">Record Completion</button>
                 </a>
             {% endif %}
         {% endif %}
-
+        <button class="mt-2 btn btn-outline-primary" onclick="history.back()">Back</button>
     </div>
 {% endblock %}
