--- a/app/yardWrk/yardSite/templates/yardSite/home.html
+++ b/app/yardWrk/yardSite/templates/yardSite/home.html
@@ -11,7 +11,7 @@
                 <div class="row row-cols-1 row-cols-md-6 g-4">
                     {% for job in queryset %}
                         <div class="col">
-                            <div class="card">
+                            <div class="card text-center">
                                 <div class="card-header">{{ job.job_type }}</div>
                                 <div class="card-body">
                                     <h5 class="card-title">${{ job.cash_reward }}</h5>
