--- a/app/yardWrk/yardSite/templates/yardSite/editJob.html
+++ b/app/yardWrk/yardSite/templates/yardSite/editJob.html
@@ -5,8 +5,8 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <h2>Edit</h2>
-
+    <h1 class="mt-2">Edit Job</h1>
+    <hr class="mt-0 mb-4">
     <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
