Added owner details page; put button on owner dashboard to get to it; Added ability to remove jobs from the database on owner dashboard, to do this go to the owner jobs page and click details. You should see a remove button. This will delete the job and redirect you back to the owner jobs page. Creating jobs as owner has a button but is not yet implemented yet.

--- a/app/yardWrk/owner/templates/owner/owner-dash.html
+++ b/app/yardWrk/owner/templates/owner/owner-dash.html
@@ -5,5 +5,12 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
+<div>
+    <h1 class="mt-2">Owner Dashboard</h1>
+    <hr class="mt-0 mb-4">
+    
+    <a href="{% url 'owner:owner_add_delete_jobs' %}">
+        <button class="mt-2 btn btn-primary">See all jobs</button>
+    </a>
+</div>
 {% endblock %}
