--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -83,7 +83,7 @@
     </div>
 
     <div>
-        <h1 class="mt-2">Reveiws received by workers</h1>
+        <h1 class="mt-2">Reviews received by workers</h1>
         <hr class="mt-0 mb-4">
         {% if customerReviews %}
             <div class="card-columns">
