Customer now can add/withdraw money to account

--- a/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/customerDashboard.html
@@ -7,8 +7,17 @@
     <div>
         <h1 class="mt-2">Wallet</h1>
         <p>{{ currentCustomer.user.wallet }}</p>
-        <button class="mt-2 btn btn-primary" href="">Add Funds</button><br>
-        <button class="mt-2 btn btn-primary" href="">Withdraw Funds</button>
+        <form method="post" class="form-group">
+            {% csrf_token %}
+            $<input type="number" name="Add" value="0"></input>
+            <button type="submit" class="btn btn-success">Add Funds</button>
+        </form>
+        <br>
+        <form method="post" class="form-group">
+            {% csrf_token %}
+            $<input type="number" name="Withdraw" value="0"></input>
+            <button type="submit" class="btn btn-success">Withdraw Funds</button>
+        </form>
     </div>
 
     <div>
