Owner can now edit balances of other accounts

--- a/app/yardWrk/owner/templates/owner/owner-dash.html
+++ b/app/yardWrk/owner/templates/owner/owner-dash.html
@@ -32,8 +32,8 @@
 </div>
 
 <div>
-    <a href="{% url 'owner:owner_edit_account_ballances' %}">
-        <button class="mt-2 btn btn-primary">Edit Account Ballances</button>
+    <a href="{% url 'owner:owner_edit_account_balances' %}">
+        <button class="mt-2 btn btn-primary">Edit Account Balances</button>
     </a>
 </div>
 {% endblock %}
