--- a/app/yardWrk/yardSite/templates/yardSite/editReview.html
+++ b/app/yardWrk/yardSite/templates/yardSite/editReview.html
@@ -9,5 +9,6 @@
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-success">Update</button>
+        <button class="mt-2 btn btn-outline-danger" onclick="history.back()">Cancel</button>
     </form>
 {%endblock%}
