--- a/app/yardWrk/accounts/templates/accounts/change-password.html
+++ b/app/yardWrk/accounts/templates/accounts/change-password.html
@@ -1,16 +1,16 @@
 {% extends "accounts/base.html" %}
 
-{% block title %} Edit Profile {% endblock %}
+{% block title %} Change Password {% endblock %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <h1 class="mt-2">Edit Profile</h1>
+    <h1 class="mt-2">Change Password</h1>
     <hr class="mt-0 mb-4">
     <form method="post" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="mt-2 btn btn-outline-primary">Submit Changes</button>
+        <button type="submit" class="mt-2 btn btn-outline-primary">Update Password</button>
         <button class="mt-2 btn btn-outline-danger" onclick="history.back()">Cancel</button>
     </form>
 {% endblock %}
