--- a/app/yardWrk/accounts/templates/accounts/login.html
+++ b/app/yardWrk/accounts/templates/accounts/login.html
@@ -41,17 +41,17 @@
                                 <p class="text-white-50 mb-3">Please enter your username and password!</p>
                                 <form method="post" class="form-group">
                                     {% csrf_token %}
-                                    <div class="form-outline form-white mb-4">
+                                    <div class="form-floating text-dark mb-4">
+                                        <input type="text" name="username" id="typeUsernameX" class="form-control form-control-lg" placeholder="Username" {% if form.is_bound %} value="{{ form.username.value }}" {% endif %}/>
                                         <label class="form-label" for="typeUsernameX">Username</label>
-                                        <input type="text" name="username" id="typeUsernameX" class="form-control form-control-lg" {% if form.is_bound %} value="{{ form.username.value }}" {% endif %}/>
                                         {% for err in form.username.errors %}
                                             <small class="text-danger">{{ err }}</small>
                                         {% endfor %}
                                     </div>
                     
-                                    <div class="form-outline form-white mb-4">
+                                    <div class="form-floating text-dark mb-4">
+                                        <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg" placeholder="Password"/>
                                         <label class="form-label" for="typePasswordX">Password</label>
-                                        <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg" />
                                         {% for err in form.password.errors %}
                                             <small class="text-danger">{{ err }}</small>
                                         {% endfor %}
