--- a/app/yardWrk/accounts/templates/accounts/profile.html
+++ b/app/yardWrk/accounts/templates/accounts/profile.html
@@ -7,53 +7,82 @@
 {% block content %}
     <h1 class="text-center">{{ user.first_name }} {{ user.last_name }}</h1>
 
-    <h1 class="mt-2">Profile</h1>
-    <hr class="mt-0 mb-4">
-    <div class="form-group">
-        <form>
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="id-username" value="{{ user.username }}" readonly>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="id-email" value="{{ user.email }}" readonly>
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone Number</label>
-                <input type="phone" class="form-control" id="id-phone" value="{{ user.phone }}" readonly>
-            </div>
-        </form>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <h1 class="mt-2">Profile</h1>
+                <hr class="mt-0 mb-4">
+                <div class="form-group">
+                    <form>
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="text" class="form-control" id="id-username" value="{{ user.username }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="id-email" value="{{ user.email }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Phone Number</label>
+                            <input type="phone" class="form-control" id="id-phone" value="{{ user.phone }}" readonly>
+                        </div>
+                    </form>
 
-        <a href="{% url 'accounts:edit-profile' %}">
-            <button class="mt-2 btn btn-outline-secondary">Edit</button>
-        </a>
+                    <div class="mt-2 btn-group">
+                        <a class="btn btn-outline-secondary" href="{% url 'accounts:edit-profile' %}">Edit</a>
+                        <a class="btn btn-outline-dark" href="{% url 'accounts:change-password' %}">Change Password</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <h1 class="mt-2">Address</h1>
+                <hr class="mt-0 mb-4">
+                <div class="form-group">
+                    <form>
+                        <div class="form-group">
+                            <label for="address">Address</label>
+                            <input type="text" class="form-control" id="id-address" value="{{ user.address }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="city">City</label>
+                            <input type="text" class="form-control" id="id-city" value="{{ user.city }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="zip">Zip/Postal Code</label>
+                            <input type="text" class="form-control" id="id-zip" value="{{ user.zip_code }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="state">State</label>
+                            <input type="text" class="form-control" id="id-state" value="{{ user.state }}" readonly>
+                        </div>
+                    </form>
+
+                    <a href="{% url 'accounts:edit-address' %}">
+                        <button class="mt-2 btn btn-outline-secondary">Edit</button>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <h1 class="mt-2">Address</h1>
+    <h1 class="mt-2">Wallet</h1>
     <hr class="mt-0 mb-4">
-    <div class="form-group">
-        <form>
-            <div class="form-group">
-                <label for="address">Address</label>
-                <input type="text" class="form-control" id="id-address" value="{{ user.address }}" readonly>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6">
+                <div class="form-group">
+                    <form>
+                        <div class="form-group">
+                            <label for="balance">Available Balance</label>
+                            <input type="text" class="form-control input-lg" id="id-balance" value="{{ user.wallet }}" readonly>
+                        </div>
+                    </form>
+                </div>
+                <div class="mt-2 btn-group">
+                    <a href="#" class="btn btn-outline-primary">Add Funds</a>
+                    <a href="#" class="btn btn-outline-dark">Withdraw Funds</a>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="city">City</label>
-                <input type="text" class="form-control" id="id-city" value="{{ user.city }}" readonly>
-            </div>
-            <div class="form-group">
-                <label for="zip">Zip/Postal Code</label>
-                <input type="text" class="form-control" id="id-zip" value="{{ user.zip_code }}" readonly>
-            </div>
-            <div class="form-group">
-                <label for="state">State</label>
-                <input type="text" class="form-control" id="id-state" value="{{ user.state }}" readonly>
-            </div>
-        </form>
-
-        <a href="{% url 'accounts:edit-address' %}">
-            <button class="mt-2 btn btn-outline-secondary">Edit</button>
-        </a>
+        </div>
     </div>
 {% endblock %}
